--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#ea4c38</color>
 
-    <color name="card_foreground">@color/white</color>
+    <color name="card_foreground">#FF018786</color>
 </resources>
